--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -1,5 +1,5 @@
 @import "normalize.css"
-
+@import "menu.sass"
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css)
 
 @font-face
