--- a/views/createanketa.jade
+++ b/views/createanketa.jade
@@ -128,6 +128,9 @@ html(lang='cz', dir='ltr')
                     div.lang-icon-container.lang-en-input(style='display:none')
                       img(src='img/en_icon.png').lang-icon
                       input.input-text(type='text', name='question' + x)
+                    div.lang-icon-container.lang-de-input(style='display:none')
+                      img(src='img/de_icon.png').lang-icon
+                      input.input-text(type='text', name='question' + x)
                     
                     label Obrázek otázky
                     div.img-container
