--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1042,7 +1042,6 @@ select {
   width: 85%;
   height: 10%;
   /* border-radius: 0.2rem; */
-  /* box-shadow: 0px 0.1rem rgb(55,59,63); */
   margin: 0 auto;
   /* border : solid .1rem #4BA82E; */
   /* transition: border .5s ease; */
@@ -1052,11 +1051,11 @@ select {
 }
 
 .desc-btn {
-  /* background-color: rgb(116, 203, 70); */
   border: none;
   font-family: skodaFontRegular;
   width: 40%;
-  height: 65%;
+  position: absolute;
+  bottom: 80px;
   /* border-radius: 0.2rem; */
   /* box-shadow: 0px 0.1rem rgb(76, 163, 30); */
   margin: 0 auto;
@@ -1204,11 +1203,12 @@ select {
 
 .end {
   display: none;
-  justify-content: space-around;
+  justify-content: flex-start;
   flex-direction: column;
   align-items: center;
   height: 100%;
   width: 100%;
+  padding-top: 80px;
 }
 
 .end-bnt {
@@ -1216,8 +1216,11 @@ select {
   border: none;
   font-size: 1.2rem;
   font-family: skodaFontRegular;
-  width: 40%;
-  height: 12%;
+  width: 45%;
+  height: 3rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   /* border-radius: 0.4rem; */
   /* box-shadow: 0px 0.1rem rgb(76, 163, 30); */
 }
@@ -1611,12 +1614,54 @@ select[name=sector_count] {
   text-align: center;
 }
 
-.end-btn-icon {
-  margin-right: 1rem;
-}
-
 .lang-icon-container + .lang-icon-container {
   padding-top: 0.2rem;
+}
+
+.admin-menu-icon {
+  display: none !important;
+}
+
+.lang-mobile-background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lang-mobile-foreground {
+  display: flex;
+  width: 60%;
+  height: 60%;
+  background: #444649;
+  border-radius: 2.5rem;
+  justify-content: space-around;
+  align-items: center;
+}
+.lang-mobile-foreground img {
+  width: auto;
+  height: 40%;
+}
+
+#lang-mobile {
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin: 10px 0 0 10px;
+  font-size: 2rem;
+}
+
+.end-btn-container {
+  width: 50%;
+  height: 3rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  bottom: 80px;
 }
 
 @keyframes spin {
@@ -1710,7 +1755,7 @@ select[name=sector_count] {
 
   .play-buttons-container {
     flex: 1 0 100%;
-    height: 45%;
+    height: 80%;
   }
 
   .play-arrow {
@@ -1806,7 +1851,7 @@ select[name=sector_count] {
   }
 
   .end-bnt {
-    height: 51px;
+    height: 55px;
     width: 70%;
     font-size: 3rem;
     margin-top: 4rem;
@@ -1819,8 +1864,9 @@ select[name=sector_count] {
   }
 
   .end-btn-container {
-    width: 100%;
+    width: 90%;
     display: flex;
+    height: 30%;
     justify-content: center;
     flex-direction: column;
     align-items: center;
@@ -1846,8 +1892,6 @@ select[name=sector_count] {
     justify-content: center;
     align-items: center;
     display: none;
-    bottom: -80%;
-    animation: slide-top 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   }
 
   .comment-mobile-foreground {
@@ -1862,6 +1906,7 @@ select[name=sector_count] {
   }
 
   .lang-mobile-background {
+    top: 0;
     width: 100vw;
     height: 100vh;
     position: absolute;
@@ -1869,8 +1914,6 @@ select[name=sector_count] {
     justify-content: center;
     align-items: center;
     display: none;
-    top: -80%;
-    animation: slide-bottom 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   }
 
   .lang-mobile-foreground {
@@ -1885,6 +1928,10 @@ select[name=sector_count] {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+  }
+  .lang-mobile-foreground img {
+    width: auto;
+    height: 30%;
   }
 
   .comment-mobile-textarea {
@@ -1923,6 +1970,10 @@ select[name=sector_count] {
     bottom: 18px;
     height: 50px;
     font-size: 2.5rem;
+  }
+
+  #q {
+    font-size: 3rem;
   }
 
   /* #q{
