--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -774,7 +774,7 @@ select
   width: 85%
   height: 10%
   /* border-radius: 0.2rem;
-  /* box-shadow: 0px 0.1rem rgb(55,59,63);
+  // box-shadow: 0.1rem 0.1rem rgba(50,50,50,.7)
   margin: 0 auto
   /* border : solid .1rem #4BA82E;
   /* transition: border .5s ease;
@@ -782,11 +782,11 @@ select
     outline: 0
 
 .desc-btn
-  /* background-color: rgb(116, 203, 70);
   border: none
   font-family: skodaFontRegular
   width: 40%
-  height: 65%
+  position: absolute
+  bottom: 80px
   /* border-radius: 0.2rem;
   /* box-shadow: 0px 0.1rem rgb(76, 163, 30);
   margin: 0 auto
@@ -915,19 +915,23 @@ select
 
 .end
   display: none
-  justify-content: space-around
+  justify-content: flex-start
   flex-direction: column
   align-items: center
   height: 100%
   width: 100%
+  padding-top: 80px
 
 .end-bnt
   /* background-color: rgb(116, 203, 70);
   border: none
   font-size: 1.2rem
   font-family: skodaFontRegular
-  width: 40%
-  height: 12%
+  width: 45%
+  height: 3rem
+  display: flex
+  justify-content: space-around
+  align-items: center
   /* border-radius: 0.4rem;
   /* box-shadow: 0px 0.1rem rgb(76, 163, 30);
 
@@ -1271,12 +1275,44 @@ select[name='sector_count']
 .end-text
   text-align: center
 
-.end-btn-icon
-  margin-right: 1rem
-
 .lang-icon-container + .lang-icon-container
   padding-top: .2rem
 
+.admin-menu-icon
+  display: none !important
+.lang-mobile-background
+  position: absolute
+  width: 100%
+  height: 100%
+  top: 0
+  display: flex
+  justify-content: center
+  align-items: center
+.lang-mobile-foreground
+  display: flex
+  width: 60%
+  height: 60%
+  background: #444649
+  border-radius: 2.5rem
+  justify-content: space-around
+  align-items: center
+  img
+    width: auto
+    height: 40%
+#lang-mobile
+  position: absolute
+  left: 0
+  top: 0
+  margin: 10px 0 0 10px
+  font-size: 2rem
+.end-btn-container
+  width: 50%
+  height: 3rem
+  display: flex
+  justify-content: space-around
+  align-items: center
+  position: absolute
+  bottom: 80px
 @keyframes spin
   from
     transform: rotate(0deg)
@@ -1342,7 +1378,7 @@ select[name='sector_count']
     font-size: 2rem
   .play-buttons-container
     flex: 1 0 100%
-    height: 45%
+    height: 80%
   .play-arrow
     flex: 0 0 50%
     height: 20%
@@ -1400,7 +1436,7 @@ select[name='sector_count']
   .lang-switch-container
     display: none
   .end-bnt
-    height: 51px
+    height: 55px
     width: 70%
     font-size: 3rem
     margin-top: 4rem
@@ -1409,8 +1445,9 @@ select[name='sector_count']
     height: 51px
     font-size: 3rem
   .end-btn-container
-    width: 100%
+    width: 90%
     display: flex
+    height: 30%
     justify-content: center
     flex-direction: column
     align-items: center
@@ -1430,8 +1467,8 @@ select[name='sector_count']
     justify-content: center
     align-items: center
     display: none
-    bottom: -80%
-    animation: slide-top 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both
+    // bottom: -80%
+    // animation: slide-top 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both
   .comment-mobile-foreground
     background-color: gray
     width: 85vw
@@ -1442,6 +1479,7 @@ select[name='sector_count']
     align-items: center
     position: absolute
   .lang-mobile-background
+    top: 0
     width: 100vw
     height: 100vh
     position: absolute
@@ -1449,8 +1487,8 @@ select[name='sector_count']
     justify-content: center
     align-items: center
     display: none
-    top: -80%
-    animation: slide-bottom 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both
+    // top: -80%
+    // animation: slide-bottom 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both
   .lang-mobile-foreground
     background-color: rgb(68, 70, 73)
     width: 85vw
@@ -1463,6 +1501,9 @@ select[name='sector_count']
     display: flex
     flex-direction: column
     justify-content: space-around
+    img
+      width: auto
+      height: 30%
   .comment-mobile-textarea
     width: 76vw
     height: 55vw
@@ -1491,6 +1532,9 @@ select[name='sector_count']
     bottom: 18px
     height: 50px
     font-size: 2.5rem
+  #q
+    font-size: 3rem
+
   /* #q{
    *  text-indent: 3rem;
    *}
