--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -740,6 +740,7 @@ select
 .desc-title
   margin: 0
   font-size: 2.8rem
+  text-align: center
 
 .desc-popis-title
   font-size: 1.5rem
@@ -846,6 +847,7 @@ select
   display: flex
   justify-content: center
   align-items: center
+  text-align: center
 
 .progress-bar-container
   /* position: relative;
@@ -1436,6 +1438,7 @@ select[name='sector_count']
     font-size: 3rem
   .desc-title
     font-size: 6rem
+    text-align: center
   .desc-select
     background: white
     width: 92% !important
