--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -1450,6 +1450,7 @@ select[name='sector_count']
     width: 70%
     font-size: 3rem
     margin-top: 4rem
+    padding: 0 25px
   .main-menu-btn
     width: 70%
     height: 51px
