--- a/views/home.jade
+++ b/views/home.jade
@@ -16,7 +16,7 @@ html(lang='cz', dir='ltr')
   //-   title
   body
     div.content-container
-      div.main-container
+      div.main-container(style='position:unset')
         div.navbar
           div.navbar-item.navbar-item-active(onclick='getSite("home");')#home
             i.navbar-item-icon.fas.fa-home
