--- a/views/home.jade
+++ b/views/home.jade
@@ -37,8 +37,8 @@ html(lang='cz', dir='ltr')
                 each anketa, i in ankety
                   div.quiz-tile
                     div.quiz-tile-content
-                      a( onclick='playConfirm("'+anketa.name+'","'+anketa.languages.length+'");').quiz-tile-link
-                        span.quiz-tile-name #{anketa.name} 
+                      a( onclick='playConfirm("'+anketa['_id']+'","'+anketa.name[0]+'","'+anketa.languages.length+'");').quiz-tile-link
+                        span.quiz-tile-name #{anketa.name[0]} 
                         img.quiz-tile-img(src=anketa.img)
             div.quiz-container
               div.quiz-label-container
