--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1086,7 +1086,7 @@ select {
 
 .progressBar {
   width: 100%;
-  height: 15%;
+  height: 10%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -1120,7 +1120,7 @@ select {
 }
 
 .question {
-  height: 15%;
+  height: 20%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1399,6 +1399,7 @@ select {
 #q {
   margin: 0 2rem;
   text-align: center;
+  font-size: 1.5rem;
 }
 
 .play-buttons-container-mps {
@@ -1655,9 +1656,9 @@ select[name=sector_count] {
 
 #lang-mobile {
   position: absolute;
-  right: 0;
-  bottom: 0;
-  font-size: 2rem;
+  right: 2.5%;
+  bottom: calc(3vh - 10px);
+  font-size: 5vh;
 }
 
 .end-btn-container {
