--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -813,7 +813,7 @@ select
 
 .progressBar
   width: 100%
-  height: 15%
+  height: 10%
   display: flex
   justify-content: space-around
   align-items: center
@@ -842,7 +842,7 @@ select
   justify-content: space-between
 
 .question
-  height: 15%
+  height: 20%
   // padding-top: 10px
   display: flex
   justify-content: center
@@ -1090,6 +1090,7 @@ select
 #q
   margin: 0 2rem
   text-align: center
+  font-size: 1.5rem
 
 .play-buttons-container-mps
   flex: 1 0 40%
@@ -1308,10 +1309,10 @@ select[name='sector_count']
     height: 40%
 #lang-mobile
   position: absolute
-  right: 0
-  bottom: 0
+  right: 2.5%
+  bottom: calc(3vh - 10px)
   // margin: 10px 0 0 10px
-  font-size: 2rem
+  font-size: 5vh
 .end-btn-container
   width: 50%
   height: 3rem
