--- a/views/createanketa.jade
+++ b/views/createanketa.jade
@@ -16,7 +16,15 @@ html(lang='cz', dir='ltr')
         div.quizForm
           form(ref='uploadForm',name="addanketa", enctype='multipart/form-data',method="post", action="/addanketa")
             label Název ankety
-            input(type="text", name="name").main-input
+            div.lang-icon-container.lang-cz-input
+              img(src='img/cz_icon.png', class='lang-icon')
+              input(type="text", name="name", class='input-text').main-input
+            div.lang-icon-container.lang-en-input(style='display:none')
+              img(src='img/en_icon.png', class='lang-icon')
+              input(type="text", name="name", class='input-text').main-input
+            div.lang-icon-container.lang-de-input(style='display:none')
+              img(src='img/de_icon.png', class='lang-icon')
+              input(type="text", name="name", class='input-text').main-input
             label Obrázek ankety
             div.img-container
               label(for='img').input-img-label Vybrat obrázek
