--- a/views/playA.jade
+++ b/views/playA.jade
@@ -84,7 +84,7 @@ html(lang='cz', dir='ltr')
           
         div.desc
           div.desc-name
-              h1.desc-title #{anketa[0].name} 
+              h1.desc-title #{anketa[0].name[0]} 
           div.desc-data
             div.desc-popis
               h2.desc-popis-title(style='display:none') Popis Ankety :
