--- a/views/playA.jade
+++ b/views/playA.jade
@@ -4,6 +4,7 @@ html(lang='cz', dir='ltr')
     meta(charset='utf-8')
     //- link(rel='stylesheet', href='../../css/main2.css')
     //- link(rel='stylesheet', href='../../css/playA.css')
+    link(rel='shorcut icon', href='../img/icon.ico', type='image/x-icon')
     link(rel='stylesheet', href='../../../css/main.css')
     //- link(rel='stylesheet', href='../css/bootstrap.css')
     //- link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.3.1/css/all.css', integrity='sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU', crossorigin='anonymous')
