--- a/views/results.jade
+++ b/views/results.jade
@@ -31,7 +31,7 @@ html(lang='cz', dir='ltr')
               span Spíš ne
               span Ne
           div.data-container
-            h3.data-name 
+            h3.data-name #{result.name}
             ul.data-list
               li.item
                 span.data-list-item-name Vyplněných anket:
