--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,10 +8,11 @@
   flex-wrap: wrap;
   padding: 2rem 2rem;
   overflow: hidden;
+  align-items: center;
 }
 
 .menu-tile-container {
-  width: 25%;
+  width: 50%;
   color: white;
   display: flex;
   height: 50%;
@@ -20,14 +21,20 @@
   animation: tile-animation 0.25s ease-in;
   animation-fill-mode: both;
 }
+.menu-tile-container a {
+  width: 100%;
+  height: 100%;
+}
 
 .menu-tile {
   z-index: -1000;
-  width: 70%;
+  width: 40%;
   background: blue;
   position: relative;
-  padding-top: 70%;
+  padding-top: 40%;
   border-radius: 1rem;
+  background-position: center;
+  background-size: cover !important;
 }
 .menu-tile.big {
   animation: mega-tile-animation 0.3s ease-in both;
@@ -1060,7 +1067,6 @@ select {
   border: none;
   font-family: skodaFontRegular;
   width: 40%;
-  position: absolute;
   bottom: 80px;
   /* border-radius: 0.2rem; */
   /* box-shadow: 0px 0.1rem rgb(76, 163, 30); */
@@ -1119,12 +1125,32 @@ select {
   justify-content: space-between;
 }
 
+.open-question {
+  flex: 1 0 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.open-question textarea {
+  width: 80%;
+  height: 80%;
+  padding: 2vh;
+  font-size: 1.25rem;
+}
+
 .question {
   height: 20%;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   text-align: center;
+  flex-direction: column;
+}
+
+#q-sub {
+  color: gray;
+  margin: 0;
+  margin-top: -2rem;
 }
 
 .progress-bar-container {
@@ -1210,16 +1236,16 @@ select {
 
 .end {
   display: none;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
   height: 100%;
   width: 100%;
-  padding-top: 80px;
 }
 
 .end-bnt {
   /* background-color: rgb(116, 203, 70); */
+  display: none !important;
   border: none;
   font-size: 1.2rem;
   font-family: skodaFontRegular;
@@ -1966,6 +1992,7 @@ select[name=sector_count] {
     font-size: 4rem;
     bottom: 10px;
     right: 10px;
+    display: none;
   }
 
   .lang-mobile-icon {
