--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -790,7 +790,7 @@ select
   border: none
   font-family: skodaFontRegular
   width: 40%
-  position: absolute
+  // position: absolute
   bottom: 80px
   /* border-radius: 0.2rem;
   /* box-shadow: 0px 0.1rem rgb(76, 163, 30);
@@ -840,15 +840,28 @@ select
   flex-direction: column
   align-items: center
   justify-content: space-between
-
+.open-question
+  flex: 1 0 40%
+  display: flex
+  align-items: center
+  justify-content: center
+  textarea
+    width: 80%
+    height: 80%
+    padding: 2vh
+    font-size: 1.25rem
 .question
   height: 20%
   // padding-top: 10px
   display: flex
-  justify-content: center
+  justify-content: space-around
   align-items: center
   text-align: center
-
+  flex-direction: column
+#q-sub
+  color: gray
+  margin: 0
+  margin-top: -2rem
 .progress-bar-container
   /* position: relative;
   display: flex
@@ -922,15 +935,15 @@ select
 
 .end
   display: none
-  justify-content: flex-start
+  justify-content: center
   flex-direction: column
   align-items: center
   height: 100%
   width: 100%
-  padding-top: 80px
 
 .end-bnt
   /* background-color: rgb(116, 203, 70);
+  display: none !important
   border: none
   font-size: 1.2rem
   font-family: skodaFontRegular
@@ -1536,6 +1549,7 @@ select[name='sector_count']
     font-size: 4rem
     bottom: 10px
     right: 10px
+    display: none 
   .lang-mobile-icon
     width: 30%
   .comment-mobile-btn
