--- a/public/sass/menu.sass
+++ b/public/sass/menu.sass
@@ -6,8 +6,9 @@
   flex-wrap: wrap
   padding: 2rem 2rem
   overflow: hidden
+  align-items: center
 .menu-tile-container
-  width: 25%
+  width: 50%
   color: white
   display: flex
   height: 50%
@@ -16,14 +17,19 @@
   // opacity: 0
   animation: tile-animation .25s ease-in
   animation-fill-mode: both
+  a
+    width: 100%
+    height: 100%
 .menu-tile
   z-index: -1000
-  width: 70%
+  width: 40%
   background: blue
   position: relative
-  padding-top: 70%
+  padding-top: 40%
   // box-shadow: 0 .5rem 1rem .7rem   rgba(0,0,0,.3)
   border-radius: 1rem
+  background-position: center
+  background-size: cover !important
   &.big
     animation: mega-tile-animation .3s ease-in both
 .menu-title
