--- a/views/settings.jade
+++ b/views/settings.jade
@@ -43,7 +43,7 @@ html(lang='cz', dir='ltr')
                   span.settings-item-name #{anketa.name[0]}
                   span.settings-item-date #{anketa.date}
                   button.btn.settings-btn(onclick='getSite("editanketa", "#{anketa.name}");') Upravit
-                  button.btn.settings-btn(onclick='getSite("results","#{anketa.name}");') Výsledky
+                  button.btn.settings-btn(onclick='getSite("results","#{anketa._id}");') Výsledky
                   button.btn.settings-btn.btn-decline(onclick='delete_item("#{anketa.name[0]}","anketa");') Odstranit
 
           div.confirm-delete#confirm-delete(style='display:none;')
