--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -712,9 +712,9 @@ select
   height: 65%
   display: flex
   flex-direction: row
-  justify-content: space-between
+  justify-content: center
   align-items: center
-
+  margin-left: 1.4rem
 .desc-btn-start
   width: 100%
   height: 15%
@@ -757,8 +757,8 @@ select
 
 .desc-input
   display: block
-  /* color: #495057;
-   */* line-height: 1.5rem;
+  color: #495057
+  line-height: 1.5rem
   width: calc(100% - 2.8rem) !important
   /* margin: 0 1rem;
   /*
@@ -840,6 +840,7 @@ select
   flex-direction: column
   align-items: center
   justify-content: space-between
+  padding: 2.5% 0
 .open-question
   flex: 1 0 40%
   display: flex
@@ -915,7 +916,7 @@ select
 
 #questionImg
   width: 88%
-  height: 100%
+  // height: 100%
   object-fit: cover
 
 #left, #right
@@ -1326,6 +1327,7 @@ select[name='sector_count']
   bottom: calc(3vh - 10px)
   // margin: 10px 0 0 10px
   font-size: 5vh
+  display: none
 .end-btn-container
   width: 50%
   height: 3rem
@@ -1549,7 +1551,7 @@ select[name='sector_count']
     font-size: 4rem
     bottom: 10px
     right: 10px
-    display: none 
+    display: none
   .lang-mobile-icon
     width: 30%
   .comment-mobile-btn
