--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -863,6 +863,7 @@ select
   color: gray
   margin: 0
   margin-top: -2rem
+  font-size: .9rem
 .progress-bar-container
   /* position: relative;
   display: flex
