--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -124,7 +124,8 @@ body
 .content
   width: 90%
   height: 100%
-  background-color: #2f3136
+  // background-color: #2f3136
+  background-color: rgb(34,34,34)
   overflow: auto
 
 /* cluster select
@@ -357,9 +358,26 @@ input
 .settings-item
   width: 100%
   height: 2.5rem
-  border-bottom: .05rem solid #585858
+  // border-bottom: .05rem solid #585858
+  border-radius: .4rem
+  margin: .3rem 0
   display: flex
   align-items: center
+  background-color: rgb(54,54,54)
+  animation: fade-in .25s ease-in
+  animation-fill-mode: both
+
+@for $i from 1 through 50
+  .settings-item:nth-child(#{$i})
+    animation-delay: $i * 0.04s
+
+.settings-results-count
+  margin-right: .65rem
+  width: 2rem
+  text-align: right
+
+.settings-results-icon
+  margin-left: .45rem
 
 .settings-item-img
   height: 1.6rem
@@ -367,6 +385,7 @@ input
   display: inline
   background-size: cover
   margin-left: .45rem
+  border-radius: .3rem
 
 .settings-item-name
   font-family: skodaFontRegular
@@ -1252,6 +1271,16 @@ select
   margin-left: .4rem
   width: calc(50% - .4rem)
 
+.settings-item-add
+  background-color: #4BA82E
+  animation: none
+  color: white
+  font-family: skodaFontRegular
+  text-align: center
+  border-radius: 5rem
+  span
+    margin: 0 auto
+
 .sector-select
   width: 25%
 
@@ -1348,7 +1377,11 @@ select[name='sector_count']
     -webkit-transform: translateY(70%)
     transform: translateY(70%)
 
-
+@keyframes fade-in
+  from
+    opacity: 0
+  to
+    opacity: 1
 /* mobile
 @media (min-width: 0px) and (max-width: 480px)
   body
