--- a/views/createanketa.jade
+++ b/views/createanketa.jade
@@ -93,19 +93,19 @@ html(lang='cz', dir='ltr')
               div.checkbox-container
                 div.check-container
                   label.checkbox-label(for='lang_en').advanced-settings-checkbox
-                    input(type='checkbox', name='lang_en', id='lang_en', onchange='langEnChange();').input-checkbox
+                    input(type='checkbox', name='lang_en', id='lang_en', onchange='langEnChange();', checked).input-checkbox
                     span.checkmark
                 span Přidat otázky v angličtině
               div.checkbox-container
                 div.check-container
                   label.checkbox-label(for='lang_de').advanced-settings-checkbox
-                    input(type='checkbox', name='lang_de', id='lang_de', onchange='langDeChange();').input-checkbox
+                    input(type='checkbox', name='lang_de', id='lang_de', onchange='langDeChange();', checked).input-checkbox
                     span.checkmark
                 span Přidat otázky v němčině
             hr
             div.questionInput
               - for(var x =0; x< 50; x++)
-                if x == 0
+                if x < 5
                   div(id='question' + x)
                     label Otázka
                     span.delete-icon-container
@@ -185,8 +185,16 @@ html(lang='cz', dir='ltr')
             br
             button.submitBtn.btn.btn-block.btn-confirm(type="button", onclick='finish();') Vytvořit 
             script.
-              count = 1;
+              count = 5;
               editData =!{JSON.stringify(anketa[0])}
+              langEnChange();
+              langDeChange();
+              $('input[name="question0"]').eq(0).val('Prezentované řešení mi přijde inovativní')
+              $('input[name="question0"]').eq(1).val('I find presented solution to be innovative')
+              $('input[name="question1"]').eq(0).val('Pravděpodobně bych prezentované řešení uvítal ve svém voze')
+              $('input[name="question1"]').eq(1).val('I would probably appreciate this innovation in my car')
+              $('input[name="question2"]').eq(0).val('Prezentace řešení mi přišla atraktivní')
+              $('input[name="question2"]').eq(1).val('I found the presentation of the solution to be attractive')
               
       nav.navbar
         a.navbar-item(href='/')
